# hammerhead-platform-controller

./: .clang-format  .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  compose.yml  hpc.ioc
cmake/: gcc-arm-none-eabi.cmake
hpc/: CMakeLists.txt  STM32F103XX_FLASH.ld  bsp.cpp  bsp.hpp  main.cpp  qp_config.hpp
hpc/cli/: cli_ao.cpp  cli_ao.hpp  cli_binding.cpp  cli_binding.hpp  embedded_cli.c  embedded_cli.h
hpc/hal/: CMakeLists.txt
hpc/hal/Core/Inc/: main.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
hpc/hal/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
hpc/imu/: bmi270.cpp  bmi270.hpp  imu_ao.cpp  imu_ao.hpp
hpc/mission/: bmi270.cpp  bmi270.hpp  i2c_mailbox copy.hpp  i2c_mailbox.cpp  i2c_mailbox.hpp  mission_ao.cpp  mission_ao.hpp
hpc/motor-control/: motor_control_ao.cpp  motor_control_ao.hpp
hpc/parameter/: EEPROM_25LC256.cpp  EEPROM_25LC256.hpp  hpc_parameters.cpp  hpc_parameters.hpp  param_ao.cpp  param_ao.hpp  parameter.cpp  parameter.hpp
kicad/hammerhead_0.0.1/: HHDMC MCU.kicad_sch  TXC_AV16000004.bak  TXC_AV16000004.kicad_sym  fp-info-cache  fp-lib-table  hammerhead_0.0.1.kicad_pcb  hammerhead_0.0.1.kicad_prl  hammerhead_0.0.1.kicad_pro  hammerhead_0.0.1.kicad_sch  hammerhead_5v_regulator.kicad_sch  hammerhead_drive_motor_controller.kicad_sch  hammerhead_imu.kicad_sch  hammerhead_power_distribution.kicad_sch  hammerhead_power_regulators.kicad_sch  hammerhead_voltage_sensors.kicad_sch  sym-lib-table
kicad/hammerhead_0.0.1/C2638679.pretty/: C2638679.kicad_mod
kicad/hammerhead_0.0.1/TXC_AV16000004.pretty/: TXC_AV16000004.kicad_mod
kicad/hammerhead_0.0.1/buck_regulator_12V_3A_L6983/: buck_regulator_12V_3A_L6983-B_Cu.gbr  buck_regulator_12V_3A_L6983-B_Mask.gbr  buck_regulator_12V_3A_L6983-B_Paste.gbr  buck_regulator_12V_3A_L6983-B_Silkscreen.gbr  buck_regulator_12V_3A_L6983-Edge_Cuts.gbr  buck_regulator_12V_3A_L6983-F_Cu.gbr  buck_regulator_12V_3A_L6983-F_Mask.gbr  buck_regulator_12V_3A_L6983-F_Paste.gbr  buck_regulator_12V_3A_L6983-F_Silkscreen.gbr  buck_regulator_12V_3A_L6983-In1_Cu.gbr  buck_regulator_12V_3A_L6983-In2_Cu.gbr  buck_regulator_12V_3A_L6983-NPTH.drl  buck_regulator_12V_3A_L6983-PTH.drl  buck_regulator_12V_3A_L6983-front-in1.drl  buck_regulator_12V_3A_L6983-front-in2.drl  buck_regulator_12V_3A_L6983-job.gbrjob  buck_regulator_12V_3A_L6983.kicad_pcb  buck_regulator_12V_3A_L6983.kicad_prl  buck_regulator_12V_3A_L6983.kicad_pro  buck_regulator_12V_3A_L6983.kicad_sch  fp-info-cache  sym-lib-table
kicad/hammerhead_0.0.1/buck_regulator_12V_3A_L6983/buck_regulator_12V_3A_L6983/: buck_regulator_12V_3A_L6983.kicad_pcb  buck_regulator_12V_3A_L6983.kicad_prl  buck_regulator_12V_3A_L6983.kicad_pro  buck_regulator_12V_3A_L6983.kicad_sch  fp-lib-table
kicad/hammerhead_0.0.1/buck_regulator_12V_3A_L6983/mfr/: buck_regulator_12V_3A_L6983-B_Cu.gbr  buck_regulator_12V_3A_L6983-B_Mask.gbr  buck_regulator_12V_3A_L6983-B_Paste.gbr  buck_regulator_12V_3A_L6983-B_Silkscreen.gbr  buck_regulator_12V_3A_L6983-Edge_Cuts.gbr  buck_regulator_12V_3A_L6983-F_Cu.gbr  buck_regulator_12V_3A_L6983-F_Mask.gbr  buck_regulator_12V_3A_L6983-F_Paste.gbr  buck_regulator_12V_3A_L6983-F_Silkscreen.gbr  buck_regulator_12V_3A_L6983-In1_Cu.gbr  buck_regulator_12V_3A_L6983-In2_Cu.gbr  buck_regulator_12V_3A_L6983-NPTH.drl  buck_regulator_12V_3A_L6983-PTH.drl  buck_regulator_12V_3A_L6983-front-in1.drl  buck_regulator_12V_3A_L6983-front-in2.drl  buck_regulator_12V_3A_L6983-job.gbrjob
kicad/hammerhead_0.0.1/buck_regulator_12V_3A_L6983/mfr_v2/: buck_regulator_12V_3A_L6983-B_Cu.gbr  buck_regulator_12V_3A_L6983-B_Mask.gbr  buck_regulator_12V_3A_L6983-B_Paste.gbr  buck_regulator_12V_3A_L6983-B_Silkscreen.gbr  buck_regulator_12V_3A_L6983-Edge_Cuts.gbr  buck_regulator_12V_3A_L6983-F_Cu.gbr  buck_regulator_12V_3A_L6983-F_Mask.gbr  buck_regulator_12V_3A_L6983-F_Paste.gbr  buck_regulator_12V_3A_L6983-F_Silkscreen.gbr  buck_regulator_12V_3A_L6983-In1_Cu.gbr  buck_regulator_12V_3A_L6983-In2_Cu.gbr  buck_regulator_12V_3A_L6983-NPTH.drl  buck_regulator_12V_3A_L6983-PTH.drl  buck_regulator_12V_3A_L6983-front-in2.drl  buck_regulator_12V_3A_L6983-job.gbrjob
kicad/hammerhead_0.0.1/buck_regulator_12V_3A_L6983/mfr_v3/: buck_regulator_12V_3A_L6983-B_Cu.gbl  buck_regulator_12V_3A_L6983-B_Mask.gbs  buck_regulator_12V_3A_L6983-B_Paste.gbp  (+12 more)
(+14 files in other folders)
